tests/NormalTests/paczka1/fuzzy1/82757901.err
Error in line 2: pwdZOnie A177 68,8
Error in line 3: sXo A192 26,3
Error in line 9: MiXt S270 30,9
Error in line 14: sXo A192 30,0
Error in line 23: pwdZOnie A192 24,9
